crates/smart-config/tests/ui/derives/param_coinciding_with_config_alias.rs
use smart_config::DescribeConfig;

#[derive(DescribeConfig)]
struct NestedConfig {
    str: String,
}

#[derive(DescribeConfig)]
struct TestConfig {
    field: u64,
    #[config(nest, alias = "field")]
    nested: NestedConfig,
}

fn main() {}
